[metadata]
name = mist
author = nassim.babaci
author-email = nassim.babaci@cloudreach.co.uk
summary = My awsome project with python
description-file = README.md
classifier =
    Development Status :: 4 - Beta
        Environment :: Console
        Environment :: AWS
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        Operating System :: OS Independent
        Programming Language :: Python

[files]
packages =
    mist
data_files =
    etc/mist = etc/*

[entry_points]
console_scripts =
    mist = mist.__main__:main
